# yt-dlp-qt

./: CMakeLists.txt  setup_qt.sh
include/: Downloader.hpp  MainWindow.hpp
src/: Downloader.cpp  MainWindow.cpp  main.cpp
